--- a/src/app/shop/product/sidebar/product-left-sidebar-with-bundle/product-left-sidebar-with-bundle.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-bundle/product-left-sidebar-with-bundle.component.html
@@ -36,68 +36,72 @@
                 </div>
             </div> -->
             <div class="row">
-                <div class="col-xl-5">
-                    <div class="row">
-                        <div class="col-sm-4 col-xl-3">
-                            <div class="thumbnail-imgs">
-                                <div *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i"
-                                    class="thumbnail-img">
-                                    <div class="owl-thumb" [class.active]="i == activeSlide">
-                                        <img [defaultImage]="'assets/images/product/placeholder.jpg'"
-                                            [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
-                                            [alt]="image.alt" class="img-fluid"
-                                            (click)="owlCar.to(activeSlide1 = i.toString())">
+                <div class="col-lg-5">
+                    <div class="sticky-scroll">
+                        <div class="row">
+                            <div class="col-sm-4 col-xl-3">
+                                <div class="thumbnail-imgs">
+                                    <div *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i"
+                                        class="thumbnail-img">
+                                        <div class="owl-thumb" [class.active]="i == activeSlide">
+                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'"
+                                                [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
+                                                [alt]="image.alt" class="img-fluid"
+                                                (click)="owlCar.to(activeSlide1 = i.toString())">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-sm-8 col-xl-9 product-carousel">
-                            <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar class="product-slick">
-                                <ng-container
-                                    *ngFor="let image of productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
-                                    <ng-template carouselSlide [id]="i">
-                                        <div>
-                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'"
-                                                [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
-                                                [alt]="image.alt" class="img-fluid">
+                            <div class="col-sm-8 col-xl-9 product-carousel">
+                                <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar
+                                    class="product-slick">
+                                    <ng-container
+                                        *ngFor="let image of productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
+                                        <ng-template carouselSlide [id]="i">
+                                            <div>
+                                                <img [defaultImage]="'assets/images/product/placeholder.jpg'"
+                                                    [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
+                                                    [alt]="image.alt" class="img-fluid">
+                                            </div>
+                                        </ng-template>
+                                    </ng-container>
+                                </owl-carousel-o>
+
+                                <!-- <div class="row">
+                                    <div class="col-12">
+                                        <div class="slider-nav">
+                                            <owl-carousel-o [options]="ProductDetailsThumbConfig" class="product-slick">
+                                                <ng-container
+                                                    *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
+                                                    <ng-template carouselSlide [id]="i">
+                                                        <div class="owl-thumb" [class.active]="i == activeSlide">
+                                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'"
+                                                                [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
+                                                                [alt]="image.alt" class="img-fluid"
+                                                                (click)="owlCar.to(activeSlide1 = i.toString())">
+                                                        </div>
+                                                    </ng-template>
+                                                </ng-container>
+                                            </owl-carousel-o>
                                         </div>
-                                    </ng-template>
-                                </ng-container>
-                            </owl-carousel-o>
-
-                            <!-- <div class="row">
-                                <div class="col-12">
-                                    <div class="slider-nav">
-                                        <owl-carousel-o [options]="ProductDetailsThumbConfig" class="product-slick">
-                                            <ng-container
-                                                *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
-                                                <ng-template carouselSlide [id]="i">
-                                                    <div class="owl-thumb" [class.active]="i == activeSlide">
-                                                        <img [defaultImage]="'assets/images/product/placeholder.jpg'"
-                                                            [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
-                                                            [alt]="image.alt" class="img-fluid"
-                                                            (click)="owlCar.to(activeSlide1 = i.toString())">
-                                                    </div>
-                                                </ng-template>
-                                            </ng-container>
-                                        </owl-carousel-o>
                                     </div>
-                                </div>
-                            </div> -->
+                                </div> -->
 
+                            </div>
+                        </div>
+                        <div class="product-buttons row mt-2">
+                            <div class="col-6 mb-2">
+                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
+                                    (click)="addToCart(1,productkart[0]?.minimum)">add
+                                    to cart</a>
+                            </div>
+                            <div class="col-6 mb-2">
+                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
+                                    (click)="addToCart(2,productkart[0]?.minimum)">buy now</a>
+                            </div>
                         </div>
                     </div>
-                    <div class="product-buttons row mt-5">
-                        <div class="col-6 mb-2">
-                            <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
-                                (click)="addToCart(1,productkart[0]?.minimum)">add
-                                to cart</a>
-                        </div>
-                        <div class="col-6 mb-2">
-                            <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
-                                (click)="addToCart(2,productkart[0]?.minimum)">buy now</a>
-                        </div>
-                    </div>
+
                 </div>
 
 
@@ -122,66 +126,74 @@
                         </ul>
                         <!-- <app-stock-inventory [stock]="productkart[0]?.qty"></app-stock-inventory> commented on 22 july by deepak -->
                         <div class="product-description border-product">
-                            <h6
-                                style="color: #222222;text-transform: capitalize;font-weight: 400;margin-bottom: 0;font-size: 20px;">
-                                Please select minimum of <b>{{productkart[0]?.minimum}} </b>Pieces
-                                <span>
-                                    <a href="javascrip:void(0)" (click)="SizeChart.openModal()">size
-                                        chart</a>
-                                </span>
-                            </h6>
-                            <br>
-                            <table class="table table-bordered table-hover">
-                                <thead class="thead-dark">
-                                    <tr>
-                                        <th *ngFor="let column of headers" class="thead-dark">
-                                            {{column}}
-                                        </th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr *ngFor="let item of productkart[0]?.productSizeColor; let myIndex  = index">
-                                        <td>
-                                            <input type="checkbox" [(ngModel)]="item.isSelected" *ngIf="item?.qty > 0"
-                                                name="checkIn" [value]="item.productSizeId" id="{{myIndex}}"
-                                                (ngModelChange)="fnCheck(item,$event,myIndex)">
-                                            {{item.color}}
 
-                                        </td>
-                                        <td>
-                                            {{item.size}}
-                                        </td>
-                                        <td>
+                            <div class="row">
+                                <div class="col-lg-8">
+                                    <h6 class="product-title size-text clearfix mb-3">
+                                        Please select minimum of <b>{{productkart[0]?.minimum}} </b>Pieces
+                                        <span>
+                                            <a href="javascrip:void(0)" (click)="SizeChart.openModal()">size
+                                                chart</a>
+                                        </span>
+                                    </h6>
+                                    <table class="table table-bordered table-hover">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th *ngFor="let column of headers" class="thead-dark">
+                                                    {{column}}
+                                                </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr
+                                                *ngFor="let item of productkart[0]?.productSizeColor; let myIndex  = index">
+                                                <td>
+                                                    <input type="checkbox" [(ngModel)]="item.isSelected"
+                                                        *ngIf="item?.qty > 0" name="checkIn"
+                                                        [value]="item.productSizeId" id="{{myIndex}}"
+                                                        (ngModelChange)="fnCheck(item,$event,myIndex)">
+                                                    {{item.color}}
 
-                                            <div class="qty-box" style="margin-top: 0px !important;">
-                                                <div *ngIf="item?.qty > 0" class="input-group">
-                                                    <span class="input-group-prepend">
-                                                        <button type="button" class="btn quantity-left-minus"
-                                                            data-type="minus" (click)="decrement(myIndex,item)">
-                                                            <i class="ti-minus"></i>
-                                                        </button>
-                                                    </span>
-                                                    <input type="text" name="quantity" id="{{ 'txtqty' + myIndex}}"
-                                                        style="width: 45px; height: 27px;"
-                                                        class="form-control input-number" [value]="item.selectedQty"
-                                                        disabled />
-                                                    <span class="input-group-prepend">
-                                                        <button type="button" class="btn quantity-right-plus"
-                                                            data-type="plus" (click)="increment(myIndex,item,item.qty)">
-                                                            <i class="ti-plus"></i>
-                                                        </button>
-                                                    </span>
-                                                </div>
-                                                <h5 class="avalibility" *ngIf="item?.qty==0"><span>Out
-                                                        of
-                                                        Stock</span></h5>
-                                            </div>
-                                        </td>
+                                                </td>
+                                                <td>
+                                                    {{item.size}}
+                                                </td>
+                                                <td>
 
-                                    </tr>
-                                </tbody>
+                                                    <div class="qty-box" style="margin-top: 0px !important;">
+                                                        <div *ngIf="item?.qty > 0" class="input-group">
+                                                            <span class="input-group-prepend">
+                                                                <button type="button" class="btn quantity-left-minus"
+                                                                    data-type="minus" (click)="decrement(myIndex,item)">
+                                                                    <i class="ti-minus"></i>
+                                                                </button>
+                                                            </span>
+                                                            <input type="text" name="quantity"
+                                                                id="{{ 'txtqty' + myIndex}}"
+                                                                style="width: 45px; height: 27px;"
+                                                                class="form-control input-number"
+                                                                [value]="item.selectedQty" disabled />
+                                                            <span class="input-group-prepend">
+                                                                <button type="button" class="btn quantity-right-plus"
+                                                                    data-type="plus"
+                                                                    (click)="increment(myIndex,item,item.qty)">
+                                                                    <i class="ti-plus"></i>
+                                                                </button>
+                                                            </span>
+                                                        </div>
+                                                        <h5 class="avalibility" *ngIf="item?.qty==0"><span>Out
+                                                                of
+                                                                Stock</span></h5>
+                                                    </div>
+                                                </td>
 
-                            </table>
+                                            </tr>
+                                        </tbody>
+
+                                    </table>
+
+                                </div>
+                            </div>
 
                         </div>
 
@@ -209,7 +221,7 @@
                 </div>
             </div>
 
-            <section class="tab-product m-0">
+            <section class="tab-product m-0 unsticky">
                 <div class="row">
                     <div class="col-sm-12 col-lg-12">
                         <ngb-tabset [type]="'tabs'" class="nav-material">
