--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -23,11 +23,18 @@
     <div class="container">
 
         <div class="success-text mb-1">
-            <img class="mb-2" src="assets/images/icon/check.svg" alt="Success!">
-            <h2>Thank you!</h2>
+            <div class="row">
+                <div class="col-md-5 text-right">
+                    <img class="mb-2" src="assets/images/icon/check.svg" alt="Success!">
+                </div>
+                <div class="col-md-7 text-left">
+                    <h2>Thank you!</h2>
 
-            <p class="mt-2">Payment has been received and Order Placed Successfully</p>
-            <p><b>Order ID:{{ orderDetails[0].orderNumber }}</b></p>
+                    <p class="mt-2">Payment has been received and Order Placed Successfully</p>
+                    <p><b>Order ID:{{ orderDetails[0].orderNumber }}</b></p>
+                </div>
+            </div>
+            <hr>
         </div>
 
         <div class="order-summary mb-1">
@@ -37,7 +44,8 @@
                     <ul class="order-detail">
                         <li><span>order ID:</span> {{ orderDetails[0].orderNumber }}</li>
                         <li><span>Order Date:</span> {{ orderDetails[0].orderDate | date : 'MMM dd, yyyy'}}</li>
-                        <li><span>Order Total:</span> {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
+                        <li><span>Order Total:</span>
+                            {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
                         </li>
                         <!-- <li><span>Payment Method:</span> Credit Card (**3569)</li> -->
                     </ul>
@@ -92,7 +100,8 @@
                     <tbody>
                         <tr *ngFor="let product of orderDetails[0].orderDetails">
                             <td>
-                                <img src="assets/images/product/fashion/19.jpg" alt="Product" style="display:none;" class="checkout-prouduct-img"> {{ product?.productName }}
+                                <img src="assets/images/product/fashion/19.jpg" alt="Product" style="display:none;"
+                                    class="checkout-prouduct-img"> {{ product?.productName }}
                             </td>
                             <td style="text-align: right;">
                                 {{ product?.salePrice | currency:productService?.Currency.currency:'symbol'}}
@@ -137,7 +146,8 @@
                             </td>
                             <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0">
                             </td>
-                            <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0" style="text-align: right;">
+                            <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"
+                                style="text-align: right;">
                                 <b>{{ getTotalAdditionalDiscountAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
                             </td>
                             <td style="text-align: right;">
@@ -148,7 +158,8 @@
                                 <b>{{ getTotalGSTAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
                             </td>
                             <td style="text-align: right;">
-                                <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                <span
+                                    style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
                                     {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
                             </td>
                         </tr>
@@ -161,7 +172,8 @@
                             <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
                             <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
                             <td colspan="2">
-                                <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                <span
+                                    style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
                                     <b>Free Packing</b></span>
                             </td>
                         </tr>
@@ -172,7 +184,8 @@
                             <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
                             <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
                             <td colspan="2" style="text-align: right;">
-                                <span style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                <span
+                                    style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
                                     {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
                             </td>
                         </tr>
