--- a/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
@@ -28,7 +28,7 @@
                 </span>
             </div>
             <div class="row">
-                <div class="col-xl-5">
+                <div class="col-lg-5">
                     <div class="row">
                         <div class="col-sm-4 col-xl-3">
                             <div class="thumbnail-imgs">
@@ -77,7 +77,7 @@
                             </div>
                         </div> -->
                     </div>
-                    <div class="product-buttons row mt-5">
+                    <div class="product-buttons row mt-2">
                         <div class="col-6 mb-2">
                             <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
                                 (click)="addToCart(1)">add to cart</a>
@@ -89,34 +89,38 @@
                     </div>
                 </div>
 
-                <div class="col-xl-7 rtl-text">
+                <div class="col-lg-7 rtl-text">
                     <div class="product-right">
-                        <h4><b>{{ productkart[0]?.productName }}</b></h4>
-                        <h4>
-                            <del
-                                *ngIf="productkart[0]?.productSizeSet[bigProductImageIndex]?.discount > 0">{{  productkart[0]?.productSizeSet[bigProductImageIndex]?.price | currency: productService.Currency?.currency:'symbol' }}</del>
-                            <span *ngIf="productkart[0]?.productSizeSet[bigProductImageIndex]?.discount > 0">
-                                {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.discount }}%
-                                off</span>
-                        </h4>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h4><b>{{ productkart[0]?.productName }}</b></h4>
+                                <h4>
+                                    <del
+                                        *ngIf="productkart[0]?.productSizeSet[bigProductImageIndex]?.discount > 0">{{  productkart[0]?.productSizeSet[bigProductImageIndex]?.price | currency: productService.Currency?.currency:'symbol' }}</del>
+                                    <span *ngIf="productkart[0]?.productSizeSet[bigProductImageIndex]?.discount > 0">
+                                        {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.discount }}%
+                                        off</span>
+                                </h4>
 
-                        <h5>
-                            <span>Price per set</span>
-                            {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.salePrice | currency: productService.Currency?.currency:'symbol' }}
-                        </h5>
-                        <h3>
-                            Price per piece:
-                            {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.averagePrice | currency: productService.Currency?.currency:'symbol' }}
-                        </h3>
-                        <h4></h4>
-                        <span>
-                            Total Pieces in this set:
-                            {{  productkart[0]?.productSizeSet[bigProductImageIndex]?.piece}}
-                        </span>
-
+                                <h5>
+                                    <span>Price per set</span>
+                                    {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.salePrice | currency: productService.Currency?.currency:'symbol' }}
+                                </h5>
+                            </div>
+                            <div class="col-md-6">
+                                <h3>
+                                    Price per piece:
+                                    {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.averagePrice | currency: productService.Currency?.currency:'symbol' }}
+                                </h3>
+                                <span>
+                                    Total Pieces in this set:
+                                    {{  productkart[0]?.productSizeSet[bigProductImageIndex]?.piece}}
+                                </span>
+                            </div>
+                        </div>
 
                         <div class="product-description border-product">
-                            <h6 class="product-title size-text">
+                            <h6 class="product-title size-text clearfix mb-3">
                                 select set
                                 <span>
                                     <a href="javascrip:void(0)" (click)="SizeChart.openModal()">size
