--- a/src/app/shop/product/sidebar/product-left-sidebar-with-bundle/product-left-sidebar-with-bundle.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-bundle/product-left-sidebar-with-bundle.component.html
@@ -41,26 +41,20 @@
                         <div class="row">
                             <div class="col-sm-4 col-xl-3">
                                 <div class="thumbnail-imgs">
-                                    <div *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i"
-                                        class="thumbnail-img">
+                                    <div *ngFor="let image of  productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i" class="thumbnail-img">
                                         <div class="owl-thumb" [class.active]="i == activeSlide">
-                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'"
-                                                [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
-                                                [alt]="image.alt" class="img-fluid"
-                                                (click)="owlCar.to(activeSlide1 = i.toString())">
+                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
+                                                [alt]="image.alt" class="img-fluid" (click)="owlCar.to(activeSlide1 = i.toString())">
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-8 col-xl-9 product-carousel">
-                                <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar
-                                    class="product-slick">
-                                    <ng-container
-                                        *ngFor="let image of productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
+                                <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar class="product-slick">
+                                    <ng-container *ngFor="let image of productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg; index as i">
                                         <ng-template carouselSlide [id]="i">
                                             <div>
-                                                <img [defaultImage]="'assets/images/product/placeholder.jpg'"
-                                                    [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
+                                                <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productColorImage/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productSizeColorId+'/'+productkart[0]?.productSizeColor[bigProductImageIndex]?.productImg[i]"
                                                     [alt]="image.alt" class="img-fluid">
                                             </div>
                                         </ng-template>
@@ -91,13 +85,11 @@
                         </div>
                         <div class="product-buttons row mt-2">
                             <div class="col-6 mb-2">
-                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
-                                    (click)="addToCart(1,productkart[0]?.minimum)">add
+                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false" (click)="addToCart(1,productkart[0]?.minimum)">add
                                     to cart</a>
                             </div>
                             <div class="col-6 mb-2">
-                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
-                                    (click)="addToCart(2,productkart[0]?.minimum)">buy now</a>
+                                <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false" (click)="addToCart(2,productkart[0]?.minimum)">buy now</a>
                             </div>
                         </div>
                     </div>
@@ -109,8 +101,7 @@
                     <div class="product-right">
                         <h4><b>{{ productkart[0]?.productName }}</b></h4>
                         <h4>
-                            <del
-                                *ngIf="productkart[0]?.discount > 0">{{  productkart[0]?.price | currency: productService.Currency?.currency:'symbol' }}</del>
+                            <del *ngIf="productkart[0]?.discount > 0">{{  productkart[0]?.price | currency: productService.Currency?.currency:'symbol' }}</del>
                             <span *ngIf="productkart[0]?.discount > 0"> {{ productkart[0]?.discount }}%
                                 off</span>
                         </h4>
@@ -118,10 +109,7 @@
                             {{ productkart[0]?.salePrice | currency: productService.Currency?.currency:'symbol' }}
                         </h3>
                         <ul class="color-variant">
-                            <li [class]="color" [class.active]="activeSlide == color.colorindex.toString()"
-                                *ngFor="let color of Color(productkart[0]?.productSizeColor); index as i"
-                                [ngStyle]="{'background-color': color.color}"
-                                (click)="changecolor(color.colorindex.toString())">
+                            <li [class]="color" [class.active]="activeSlide == color.colorindex.toString()" *ngFor="let color of Color(productkart[0]?.productSizeColor); index as i" [ngStyle]="{'background-color': color.color}" (click)="changecolor(color.colorindex.toString())">
                             </li>
                         </ul>
                         <!-- <app-stock-inventory [stock]="productkart[0]?.qty"></app-stock-inventory> commented on 22 july by deepak -->
@@ -130,7 +118,7 @@
                             <div class="row">
                                 <div class="col-lg-8">
                                     <h6 class="product-title size-text clearfix mb-3">
-                                        Please select minimum of <b>{{productkart[0]?.minimum}} </b>Pieces
+                                        Please select minimum of <strong style="font-size: x-large;">{{productkart[0]?.minimum}} </strong>Pieces
                                         <span>
                                             <a href="javascrip:void(0)" (click)="SizeChart.openModal()">size
                                                 chart</a>
@@ -145,14 +133,9 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr
-                                                *ngFor="let item of productkart[0]?.productSizeColor; let myIndex  = index">
+                                            <tr *ngFor="let item of productkart[0]?.productSizeColor; let myIndex  = index">
                                                 <td>
-                                                    <input type="checkbox" [(ngModel)]="item.isSelected"
-                                                        *ngIf="item?.qty > 0" name="checkIn"
-                                                        [value]="item.productSizeId" id="{{myIndex}}"
-                                                        (ngModelChange)="fnCheck(item,$event,myIndex)">
-                                                    {{item.color}}
+                                                    <input type="checkbox" [(ngModel)]="item.isSelected" *ngIf="item?.qty > 0" name="checkIn" [value]="item.productSizeId" id="{{myIndex}}" (ngModelChange)="fnCheck(item,$event,myIndex)"> {{item.color}}
 
                                                 </td>
                                                 <td>
@@ -168,11 +151,7 @@
                                                                     <i class="ti-minus"></i>
                                                                 </button>
                                                             </span>
-                                                            <input type="text" name="quantity"
-                                                                id="{{ 'txtqty' + myIndex}}"
-                                                                style="width: 45px; height: 27px;"
-                                                                class="form-control input-number"
-                                                                [value]="item.selectedQty" disabled />
+                                                            <input type="text" name="quantity" id="{{ 'txtqty' + myIndex}}" style="width: 45px; height: 27px;" class="form-control input-number" [value]="item.selectedQty" disabled />
                                                             <span class="input-group-prepend">
                                                                 <button type="button" class="btn quantity-right-plus"
                                                                     data-type="plus"
@@ -241,9 +220,7 @@
                                         <!-- <iframe width="560" height="315"
                                             src="https://www.youtube.com/embed/BUWzX78Ye_8"
                                               allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
-                                        <iframe width="560" height="315"
-                                            [src]="productkart[0]?.videoURL | safe: 'resourceUrl'"
-                                            allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                        <iframe width="560" height="315" [src]="productkart[0]?.videoURL | safe: 'resourceUrl'" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                     </div>
                                 </ng-template>
                             </ngb-tab>
