--- a/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
@@ -32,25 +32,20 @@
                     <div class="row">
                         <div class="col-sm-4 col-xl-3">
                             <div class="thumbnail-imgs">
-                                <div *ngFor="let image of  productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg; index as i"
-                                    class="thumbnail-img">
+                                <div *ngFor="let image of  productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg; index as i" class="thumbnail-img">
                                     <div class="owl-thumb" [class.active]="i == activeSlide">
-                                        <img [defaultImage]="'assets/images/product/placeholder.jpg'"
-                                            [lazyLoad]="ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[i]"
-                                            [alt]="image.alt" class="img-fluid"
-                                            (click)="owlCar.to(activeSlide = i.toString())">
+                                        <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[i]"
+                                            [alt]="image.alt" class="img-fluid" (click)="owlCar.to(activeSlide = i.toString())">
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-8 col-xl-9 product-carousel">
                             <owl-carousel-o [options]="ProductDetailsMainSliderConfig" #owlCar class="product-slick">
-                                <ng-container
-                                    *ngFor="let image of productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg; index as i">
+                                <ng-container *ngFor="let image of productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg; index as i">
                                     <ng-template carouselSlide [id]="i">
                                         <div>
-                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'"
-                                                [lazyLoad]="ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[i]"
+                                            <img [defaultImage]="'assets/images/product/placeholder.jpg'" [lazyLoad]="ProductImage+productkart[0]?.productID+'/productSetImage/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.setNo+'/'+productkart[0]?.productSizeSet[bigProductImageIndex]?.productImg[i]"
                                                 [alt]="image.alt" class="img-fluid">
                                         </div>
                                     </ng-template>
@@ -79,12 +74,10 @@
                     </div>
                     <div class="product-buttons row mt-2">
                         <div class="col-6 mb-2">
-                            <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
-                                (click)="addToCart(1)">add to cart</a>
+                            <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false" (click)="addToCart(1)">add to cart</a>
                         </div>
                         <div class="col-6 mb-2">
-                            <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false"
-                                (click)="addToCart(2)">buy now</a>
+                            <a href="javascrip:void(0)" class="btn btn-solid w-100" [class.disabled]="false" (click)="addToCart(2)">buy now</a>
                         </div>
                     </div>
                 </div>
@@ -95,26 +88,27 @@
                             <div class="col-md-6">
                                 <h4><b>{{ productkart[0]?.productName }}</b></h4>
                                 <h4>
-                                    <del
-                                        *ngIf="productkart[0]?.productSizeSet[bigProductImageIndex]?.discount > 0">{{  productkart[0]?.productSizeSet[bigProductImageIndex]?.price | currency: productService.Currency?.currency:'symbol' }}</del>
+                                    <del *ngIf="productkart[0]?.productSizeSet[bigProductImageIndex]?.discount > 0">{{
+                                        productkart[0]?.productSizeSet[bigProductImageIndex]?.price | currency:
+                                        productService.Currency?.currency:'symbol' }}</del>
                                     <span *ngIf="productkart[0]?.productSizeSet[bigProductImageIndex]?.discount > 0">
                                         {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.discount }}%
                                         off</span>
                                 </h4>
 
                                 <h5>
-                                    <span>Price per set</span>
-                                    {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.salePrice | currency: productService.Currency?.currency:'symbol' }}
+                                    <span>Price per set</span> {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.salePrice | currency: productService.Currency?.currency:'symbol' }}
                                 </h5>
                             </div>
                             <div class="col-md-6">
                                 <h3>
-                                    Price per piece:
-                                    {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.averagePrice | currency: productService.Currency?.currency:'symbol' }}
+                                    Price per piece: {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.averagePrice | currency: productService.Currency?.currency:'symbol' }}
                                 </h3>
                                 <span>
                                     Total Pieces in this set:
-                                    {{  productkart[0]?.productSizeSet[bigProductImageIndex]?.piece}}
+                                    <strong style="font-size: x-large;">
+                                        {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.piece}}
+                                    </strong>
                                 </span>
                             </div>
                         </div>
@@ -130,8 +124,7 @@
 
                             <div class="size-box">
                                 <ul>
-                                    <li [class.active]="selectedSize == list"
-                                        *ngFor="let list of SetList(productkart[0]?.productSizeSet);index as i">
+                                    <li [class.active]="selectedSize == list" *ngFor="let list of SetList(productkart[0]?.productSizeSet);index as i">
                                         <a href="javascript:void(0)" (click)="selectSize(i)">
                                             {{ list }}
                                         </a>
@@ -163,9 +156,7 @@
                     <input type="checkbox" [(ngModel)]="item.isSelected"   [value]="item.setNo" name="checkIn" id="{{myIndex}}">
                 </td> -->
                                         <td>
-                                            <input type="checkbox" style="margin-top: 5px;"
-                                                [(ngModel)]="item.isSelected" [value]="item.setNo" name="checkIn"
-                                                id="{{myIndex}}"> {{item.setNo}}
+                                            <input type="checkbox" style="margin-top: 5px;" [(ngModel)]="item.isSelected" [value]="item.setNo" name="checkIn" id="{{myIndex}}"> {{item.setNo}}
                                         </td>
                                         <td>
                                             {{item.piece}}
@@ -181,10 +172,7 @@
                                                             <i class="ti-minus"></i>
                                                         </button>
                                                     </span>
-                                                    <input type="text" name="quantity" id="{{ 'txtqty' + myIndex}}"
-                                                        style="width: 45px; height: 27px;"
-                                                        class="form-control input-number" [value]="item.selectedQty"
-                                                        disabled />
+                                                    <input type="text" name="quantity" id="{{ 'txtqty' + myIndex}}" style="width: 45px; height: 27px;" class="form-control input-number" [value]="item.selectedQty" disabled />
                                                     <span class="input-group-prepend">
                                                         <button type="button" class="btn quantity-right-plus"
                                                             data-type="plus" (click)="increment(myIndex,item,item.qty)">
@@ -280,8 +268,7 @@
                                 <ng-template ngbTabTitle>Video</ng-template>
                                 <ng-template ngbTabContent>
                                     <div class="mt-3 text-center">
-                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BUWzX78Ye_8"
-                                            allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BUWzX78Ye_8" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                                     </div>
                                 </ng-template>
                             </ngb-tab>
